# life-classics

./: .gitignore  .impeccable.md  CLAUDE.md  COMMIT_INSTRUCTIONS.md  DESIGN.md  IMPLEMENTATION_SUMMARY.md  README.md  findings.md  package.json  progress.md  skills-lock.json  start.sh  stop.sh  task_plan.md
agent-server/: .gitignore  20120518_10_analysis.md  20120518_10_analysis.txt  20120518_10_analysis_cache.txt  20120518_10_analysis_chunks.json  20120518_10_page1.md  OCR_SETUP.md  README.md  REGULATORY_ANALYZER_README.md  demo_rerank.py  example_usage.py  import_files.py  process_regulatory_document.py  pyproject.toml  requirements.txt  results.json  run.py  test_convert_FTS.py  test_convert_chunk.py  test_convert_iarc.py  test_simple_pdf_llm.py  view_all_chunks.py  view_chunks.py
agent-server/admin/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
agent-server/admin/src/: App.tsx  index.css
agent-server/app/: __init__.py  main.py
agent-server/app/api/: __init__.py  chat.py  document.py  documents.py  health.py  query.py  translate.py
agent-server/app/core/: config.py  document_chunk.py  document_loader.py  embeddings.py  file_converter.py  llm.py  parent_store.py  pdf_structure_extractor.py  regulatory_semantic_analyzer.py  vector_store.py
agent-server/app/web/: __init__.py  chroma_viewer.py  index.html  main.py
agent-server/cache/: chunking_spec_test_data.json  chunking_spec_test_report.md
agent-server/docs/assets/: GB 1886.128-2015 食品安全国家标准 食品添加剂 甲基环戊烯醇酮（又名 3-甲基-2-羟基-2-环戊烯-1-酮）.md  GB 1886.3-2021 食品安全国家标准 食品添加剂 磷酸氢钙.md  GB 31604.29-2016 食品安全国家标准 食品接触材料及制品 甲基丙烯酸甲酯迁移量的测定.md  GB 31659.4-2025.md  GB 5009.211-2022 食品安全国家标准 食品中叶酸的测定.md  GB 8821-2011 食品安全国家标准 食品添加剂 β-胡萝卜素.md  MinerU_markdown_GB_4789.4-2024_食品安全国家标准_食品微生物学检验_沙门氏菌检验_2028403317045395456.md  MinerU_markdown_GB_5009.129-2023食品安全国家标准_食品中乙氧基喹的测定_2028403186908721152.md  MinerU_markdown_GB_500933-2010_食品安全国家标准_食品中亚硝酸盐与硝酸盐的测定_2028404939595120640.md  neo4j_schema.cypher  硬脂酸钾.md  细菌回复突变试验.md
agent-server/docs/plans/: 2026-03-02-agent-module-design.md  2026-03-02-chunking-spec-compliance-implementation-plan.md  2026-03-02-chunking-strategy-spec.md  2026-03-02-full-refactor-implementation-plan.md  2026-03-02-kb-adaptive-impl-plan.md  2026-03-02-kb-adaptive-split-design.md  2026-03-02-knowledge-base-gb2760-strategy.md  2026-03-02-mineru-image-description-design.md  2026-03-02-mineru-image-description-implementation-plan.md  2026-03-02-mineru-library-adapter-design.md  2026-03-02-mineru-library-adapter-implementation-plan.md  2026-03-02-national-standard-rag-implementation-plan.md  2026-03-02-national-standard-rag-refactor-design.md
agent-server/files/: _AgentsClassifiedbytheIARCMonographs,Volumes1–140.en_parsed.json
agent-server/scripts/: test_chunking_spec_on_assets.py
agent-server/spike/: test_agno_dashscope.py
agent-server/test/: split_pdf_semantic.py
agent-server/test/gb2760/: check_missing.py  main.py  split.py
agent-server/test/pdf_continuation_detector/: README.md  __init__.py  example.py
agent-server/test/pdf_images/: extract_pdf_images.py  parse_images_with_llm.py
agent-server/tests/artifacts/: parser_workflow_structure_before_transform_20260318_160801.json  parser_workflow_structure_before_transform_20260318_164120.json  parser_workflow_structure_before_transform_20260318_185303.json  parser_workflow_structure_before_transform_20260318_223950.json  parser_workflow_structure_before_transform_20260318_225632.json  parser_workflow_structure_before_transform_20260318_230714.json  parser_workflow_structure_before_transform_20260318_233102.json  parser_workflow_structure_before_transform_20260319_110209.json  parser_workflow_structure_before_transform_20260319_110608.json  parser_workflow_structure_before_transform_20260319_141123.json  parser_workflow_structure_before_transform_20260319_151921.json  parser_workflow_structure_before_transform_20260319_155554.json  parser_workflow_structure_before_transform_20260319_162855.json  parser_workflow_structure_before_transform_20260319_165533.json  (+2 more)
agent-server/tools/: change_links.py  iarc.json  iarc_cancer_site.json  iarc_cancer_site.py  iarc_links.json  test_convert_iarc.py
server/: .gitignore  README.md  check_json.py  config.py  conftest.py  enums.py  insert_test_data.py  pyproject.toml  reset_db.py  run.py  run_test.sh
server/agent/: __init__.py  agent.py  factory.py  food_safety_agent.py  llm_adapter.py  pyproject.toml  skill_loader.py
server/agent/tools/: __init__.py  knowledge_base.py  (+4 more)
server/alembic/: env.py
server/api/: __init__.py  config.py  main.py  pyproject.toml  shared.py
server/audit-results/: import-violations.md  layer-violations.md  naming-async-violations.md  transaction-logging-violations.md
server/database/: __init__.py  models.py  session.py
server/db_repositories/: __init__.py  food.py  ingredient.py  ingredient_admin.py  ingredient_alias.py  ingredient_analysis.py  product_analysis.py  search.py  seed_data.py
server/kb/: clients.py  embeddings.py  models.py  pyproject.toml
server/llm/: __init__.py  anthropic.py  dashscope.py  ollama.py  pyproject.toml
server/observability/: __init__.py  configure.py  metrics.py  middleware.py  pyproject.toml
server/parser/: __init__.py  document_chunk.py  graph.py  llm.py  models.py  post_classify_hooks.py  pyproject.toml  rules.py
server/scripts/: batch_upload.py  reset_db.py  seed_data.py
server/services/: __init__.py  agent_service.py  analysis_service.py  ingredient_admin.py  kb_service.py  parser_workflow_service.py  product_analysis_service.py
server/worflow_parser_kb/: structured_gateway.py
server/workflow_ingredient_analysis/: __init__.py  entry.py  graph.py  models.py  pyproject.toml  structured_gateway.py
server/workflow_parser_kb/: __init__.py  document_chunk.py  graph.py  models.py  post_classify_hooks.py  pyproject.toml  structured_gateway.py
server/workflow_product_analysis/: assembler.py  food_resolver.py  ingredient_matcher.py  ingredient_parser.py  ocr_client.py  pipeline.py  pyproject.toml  redis_store.py  types.py
(+1892 files in other folders)
