[project]
name = "agent"
version = "0.1.0"
description = "个人知识库系统 - 基于FastAPI + LangChain + LlamaIndex + ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "llama-index>=0.9.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "llama-index-llms-dashscope>=0.1.0",
    "llama-index-embeddings-dashscope>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "chromadb>=0.4.15",
    "dashscope>=1.17.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0",
    "docx2python>=1.9.0",
    "python-pptx>=0.6.23",
    "markdown>=3.5.0",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-embeddings-ollama>=0.8.4",
    "duckduckgo-search>=6.0.0",  # 网络搜索工具（DuckDuckGo）
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
