[project]
name = "agent"
version = "0.1.0"
description = "个人知识库系统 - 基于FastAPI + LangChain + ChromaDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.4",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.3",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=1.3.7",
    "dashscope>=1.17.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.0",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0",
    "docx2python>=1.9.0",
    "python-pptx>=0.6.23",
    "markdown>=3.5.0",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
    "ddgs>=9.0.0",  # 网络搜索工具（DuckDuckGo，原 duckduckgo-search）
    "pytesseract>=0.3.13",
    "pillow>=12.0.0",
    "pdf2image>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
