[project]
name = "server"
version = "0.1.0"
description = "知识库系统后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.4",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.3",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=1.3.7",
    "dashscope>=1.17.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.0",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0",
    "docx2python>=1.9.0",
    "python-pptx>=0.6.23",
    "markdown>=3.5.0",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
    "ddgs>=9.0.0",
    "pytesseract>=0.3.13",
    "pillow>=12.0.0",
    "pdf2image>=1.17.0",
    "unstructured>=0.18.21",
    "langchain-unstructured>=1.0.1",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "transformers>=4.57.6",
    "torch>=2.10.0",
    "neo4j>=5.0.0",
    "langgraph>=0.2.0",
    "instructor>=1.14.5",
    "jieba>=0.42.1",
    "agno>=2.5.10",
    "cachetools>=7.0.5",
    "api",
    "kb",
    "parser",
    "agent",
    "llm",
    "observability",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "structlog>=25.5.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.24.1",
]

[tool.uv.sources]
api = { workspace = true }
kb = { workspace = true }
parser = { workspace = true }
agent = { workspace = true }
llm = { workspace = true }
observability = { workspace = true }

[tool.uv.workspace]
members = [
    "llm",
    "api",
    "agent",
    "kb",
    "parser",
    "observability",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
addopts = "--import-mode=importlib"
markers = [
    "real_llm: tests requiring real LLM/service calls",
    "integration: tests requiring real external services (Neo4j, Ollama)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]
