[project]
name = "server"
version = "0.1.0"
description = "知识库系统后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.38.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.3",
    "chromadb>=1.3.7,<1.5.0",
    "dashscope>=1.17.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.1",
    "requests>=2.31.0",
    "ddgs>=9.0.0",
    "transformers>=4.57.6",
    "torch>=2.10.0",
    "neo4j>=5.0.0",
    "langgraph>=0.2.0",
    "jieba>=0.42.1",
    "agno>=2.5.10",
    "cachetools>=7.0.5",
    "api",
    "kb",
    "workflow_parser_kb",
    "agent",
    "llm",
    "observability",
    "structlog>=25.5.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-http>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus-client>=0.24.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "anthropic>=0.86.0",
    "alembic>=1.18.4",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "redis>=5.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
api = { workspace = true }
kb = { workspace = true }
workflow_parser_kb = { workspace = true }
agent = { workspace = true }
llm = { workspace = true }
observability = { workspace = true }

[tool.uv.workspace]
members = [
    "llm",
    "api",
    "agent",
    "kb",
    "workflow_parser_kb",
    "observability",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "real_llm: tests requiring real LLM/service calls",
    "integration: tests requiring real external services (Neo4j, Ollama)",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=40.11.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "fakeredis>=2.19.0",
    "respx>=0.22.0",
]
