[project]
name = "agent"
version = "0.1.0"
dependencies = [
    "llm",
    "kb",
    "parser",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv.sources]
llm = { workspace = true }
kb = { workspace = true }
parser = { workspace = true }
