[project]
name = "agent"
version = "0.1.0"
dependencies = [
    "llm",
    "kb",
    "worflow_parser_kb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv.sources]
llm = { workspace = true }
kb = { workspace = true }
worflow_parser_kb = { workspace = true }
