[project]
name = "api"
version = "0.1.0"
dependencies = [
    "llm",
    "agent",
    "kb",
    "parser",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv.sources]
llm = { workspace = true }
agent = { workspace = true }
kb = { workspace = true }
parser = { workspace = true }
