[project]
name = "api"
version = "0.1.0"
dependencies = [
    "llm",
    "agent",
    "kb",
    "worflow_parser_kb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv.sources]
llm = { workspace = true }
agent = { workspace = true }
kb = { workspace = true }
worflow_parser_kb = { workspace = true }
