[project]
name = "api"
version = "0.1.0"
dependencies = [
    "llm",
    "agent",
    "kb",
    "workflow_parser_kb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv.sources]
llm = { workspace = true }
agent = { workspace = true }
kb = { workspace = true }
workflow_parser_kb = { workspace = true }
