[project]
name = "kb"
version = "0.1.0"
dependencies = [
    "llm",
    "workflow_parser_kb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kb"]

[tool.uv.sources]
llm = { workspace = true }
workflow_parser_kb = { workspace = true }
