[project]
name = "workflow_ingredient_analysis"
version = "0.1.0"
dependencies = [
    "kb",
    "llm",
    "observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflow_ingredient_analysis"]

[tool.uv.sources]
kb = { workspace = true }
llm = { workspace = true }
observability = { workspace = true }
